2 commits en uno
Se programó la gestión de solicitudes con la cola de prioridad para que aparecieran las que tienen más urgencia de primero y se implementó la recomendación de contenido con mayor valoración