@@ -5,14 +5,19 @@ import com.uniquindio.redsocial.model.SolicitudAyuda;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class SolicitudAyudaService {
     private final ColaPrioridadAyuda cola = new ColaPrioridadAyuda();
 
     public void registrarSolicitud(String correo, String descripcion, SolicitudAyuda.Prioridad prioridad) {
-        SolicitudAyuda solicitud = new SolicitudAyuda(UUID.randomUUID().toString(), descripcion, correo, prioridad);
+        SolicitudAyuda solicitud = new SolicitudAyuda(
+                java.util.UUID.randomUUID().toString(),
+                descripcion,
+                correo,
+                prioridad
+        );
         cola.agregarSolicitud(solicitud);
     }
 
@@ -20,7 +25,9 @@ public class SolicitudAyudaService {
         return cola.atenderSolicitud();
     }
 
-    public List<SolicitudAyuda> listarSolicitudes() {
-        return cola.obtenerSolicitudes().stream().toList();
+    public List<SolicitudAyuda> listarSolicitudesOrdenadas() {
+        return cola.obtenerSolicitudes().stream()
+                .sorted()
+                .collect(Collectors.toList());
     }
 }
